# ContGrid

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_room_fix.py
contgrid/: __init__.py  contgrid.py
contgrid/core/: __init__.py  action.py  agent.py  const.py  entities.py  env.py  grid.py  grid_rust.py  observation.py  render.py  scenario.py  typing.py  utils.py  world.py
contgrid/envs/: __init__.py  rooms.py
contgrid/envs/rooms/: __init__.py  configs.py  env.py  observations.py  scenario.py  spawn_strategies.py  topology.py
contgrid/envs/zone/: __init__.py  configs.py  env.py  observations.py  scenario.py  spawn_strategies.py
contgrid/envs/zone/spawn/: __init__.py  spawn_manager.py  spawn_strategies.py
docs/misc/: COMPLETE_SPAWNING_ANALYSIS.md  RUST_ACCELERATION.md  RUST_OPTIMIZATION.md  SPATIAL_REJECTION_RESULTS.md
scripts/: benchmark_rust.py  main_rooms.py  profile_memory.py  profile_performance.py
src/: lib.rs
tests/: test_rust_integration.py
tests/core/: test_clip_position.py  test_env.py
tests/envs/: test_rooms.py  test_zone.py
